# qwen3-tts-server

./: .gitignore  Containerfile  LICENSE  README.md  benchmark.py  docker-compose.yml  pyproject.toml  server.py  test-tts.py  voice_registry.py
.github/workflows/: build.yml
assets/preset/: README.md  bundle.json  bundle.safetensors
tests/: test_smoke.py
