[project]
name = "qwen3-tts-server"
version = "0.1.0"
description = "OpenAI-compatible HTTP server for Qwen3-TTS-CustomVoice with sentence and PCM streaming."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Michel Belleau", email = "michel@malaiwah.com" }]
keywords = ["tts", "qwen3", "speech-synthesis", "voice-cloning", "openai-compatible"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "torch>=2.4",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "soundfile>=0.12",
    "numpy>=1.26",
    "qwen-tts",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
gpu = ["faster-qwen3-tts", "flash-attn"]
test = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.23"]

[project.scripts]
qwen3-tts-server = "server:main"

[project.urls]
Homepage = "https://github.com/malaiwah/qwen3-tts-server"
"Bug Tracker" = "https://github.com/malaiwah/qwen3-tts-server/issues"
"Companion ASR Server" = "https://github.com/malaiwah/qwen3-asr-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
